--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "lint": "./node_modules/.bin/eslint app/javascript/packs/**/*.js",
-    "prettier": "prettier-eslint --write app/javascript/packs/**/*.js"
+    "prettier": "prettier-eslint --write app/javascript/packs/**/*.js",
+    "flow": "flow"
   },
   "dependencies": {
     "@rails/webpacker": "3.5",
@@ -20,6 +21,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "flow-bin": "^0.71.0",
     "prettier": "^1.12.1",
     "prettier-eslint": "^8.8.1",
     "prettier-eslint-cli": "^4.7.1",
