--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,5 +64,8 @@ jobs:
           name: Deploy Master to Heroku
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              heroku maintenance:on
               git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+              heroku run 'rake db:migrate; rake db:seed_fu'
+              heroku maintenance:off
             fi
