--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,8 @@ jobs:
           name: Deploy Master to Heroku
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              heroku maintenance:on
+              heroku maintenance:on --app ${HEROKU_APP_NAME}
               git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
-              heroku run 'rake db:migrate; rake db:seed_fu'
-              heroku maintenance:off
+              heroku run 'rake db:migrate; rake db:seed_fu' --app ${HEROKU_APP_NAME}
+              heroku maintenance:off --app ${HEROKU_APP_NAME}
             fi
